# libuv

./: BUILD.gn
samples/socks5-proxy/: BUILD.gn  client.c  getopt.c
src/unix/: pipe.c
test/: test-fs.c
